[#12] Refactoring part 3;